# herd-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  config.yaml  docker-compose.yml  pyproject.toml  setup.sh
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/jobs/: page.tsx
dashboard/app/pipeline/: page.tsx
dashboard/app/proposals/: page.tsx
dashboard/components/: FunnelChart.tsx  ScoreDistChart.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx
dashboard/lib/: api.ts
migrations/: 001_initial.sql  002_bid_strategies.sql  003_bid_strategies_add_rate_urgency.sql
scripts/: migrate.py  seed_proposals.py
src/api/: app.py  deps.py
src/api/routes/: dashboard.py  jobs.py  proposals.py
src/core/: config.py  crewai.py  db.py  events.py  mission_control.py  observability.py  types.py
src/departments/analyst/: agent.py  crew.py  deep_score.py  fast_score.py  scheduler.py  tools.py
src/departments/bizdev/: agent.py  crew.py  positioning.py  pricing.py  scheduler.py  tools.py
src/models/: bid.py  client.py  events.py  experiment.py  job.py  proposal.py  score.py
src/platform/: contracts.py  registry.py
src/repositories/: bid_repo.py  job_repo.py  proposal_repo.py  score_repo.py
tests/: conftest.py
tests/fixtures/: upwork_job_listing.html  upwork_rss_entry.xml
tests/unit/: test_bizdev_crew.py  test_bizdev_scheduler.py  test_content_scheduler.py  test_content_writer.py  test_deep_score.py  test_events.py  test_fast_score.py  test_parsers.py  test_pricing.py  test_scheduler.py
(+14 files in other folders)
